# Ray-tracer

./: .gitignore  README.md  onnx_exporter.py  requirements-phase1.txt  smoke_test_phase2.py
deployment/tensorrt/: CMakeLists.txt  allocation_converter.cu  allocation_converter.h  fallback_manager.cu  fallback_manager.h  inference_harness.cpp  inference_harness.h  profile_harness.cpp  profile_harness.h  trt_builder.cpp  vulkan_dispatch_snippet.cpp  vulkan_interop_bridge.cpp
docs/: architecture.md  data_contract.md  decision_log.md  roadmap.md  training_plan.md
src/: __init__.py
src/data/: __init__.py  exporter.py  scene_config.py  tile_labeller.py
src/training/: __init__.py  dataset.py  model.py
